Backend/k8s-manifests/manifests/data-api-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --file docker-compose.yml --out k8s-manifests
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: data-api-service
  name: data-api-service
  # # namespace: stock-pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: data-api-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --file docker-compose.yml --out k8s-manifests
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: data-api-service
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - env:
            - name: DJANGO_DEBUG
              value: "True"
            - name: DJANGO_SECRET_KEY
              value: django-insecure-k^c404!2*woj(h(+ek*e#=0sh^qrjw9y-g34m^*qy=^=!43v%^
            - name: SQL_DATABASE
              value: us_stock_options_db
            - name: SQL_DRIVER
              value: ODBC Driver 18 for SQL Server
            - name: SQL_PASSWORD
              value: wearethebest@69
            - name: SQL_SERVER
              value: dash-gtd.database.windows.net
            - name: SQL_USERNAME
              value: dash_gtd
          image: hdm08/data_api_service:latest
          name: data-api-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8006
              protocol: TCP
      restartPolicy: Always
