Backend/k8s-manifests/manifests/database-writer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --file docker-compose.yml --out k8s-manifests
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: database-writer
  name: database-writer
  # namespace: stock-pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database-writer
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --file docker-compose.yml --out k8s-manifests
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: database-writer
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - env:
            - name: APP_DEBUG
              value: "True"
            - name: AZURE_SQL_CONNECTION_STRING
              value: Driver={ODBC Driver 18 for SQL Server};Server=dash-gtd.database.windows.net;Database=us_stock_options_db;Uid=dash_gtd;Pwd=wearethebest@69;Encrypt=yes;TrustServerCertificate=no;Connection Timeout=60;
            - name: DJANGO_SECRET_KEY
              value: django-insecure-np#5k+3!h2y5he0r=inoh*l5^nw*!t-&e^t-p5zb5ror*^jkyw
            - name: INFLUXDB_BUCKET
              value: fifteenmin_stockdata
            - name: INFLUXDB_ORG
              value: US_Stock_Data
            - name: INFLUXDB_TOKEN
              value: p4vPDiJyynco8tjaNhG2ch7A51SHtzN0ta3VsJ6Y1OqVyHtvuAL7K_gKOVmsYV47F_hqaNPlHKOdi6Y_C8Xjw==
            - name: INFLUXDB_URL
              value: https://us-east-1-1.aws.cloud2.influxdata.com
            - name: KAFKA_BOOTSTRAP_SERVERS
              value: kafka:9092
            - name: KAFKA_PROCESSED_15MIN
              value: processed-15min-data
            - name: KAFKA_PROCESSED_DAILY
              value: processed-daily-data
            - name: KAFKA_PROCESSED_HISTORICAL
              value: processed-historical-data
            - name: KAFKA_PROCESSED_OPTIONS
              value: processed-options-data
            - name: RUN_DB_HANDLER
              value: "False"
<<<<<<< HEAD
          image: hdm08/backend-database-writer-service:latest
=======
          image: hdm08/database_writer_service:latest
>>>>>>> a0680f0 (alinging docker image and deployment)
          name: database-writer
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8002
              protocol: TCP
      restartPolicy: Always
