Backend/k8s-manifests/manifests/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: data-api-ingress
#   namespace: default
#   annotations:
#     # nginx.ingress.kubernetes.io/rewrite-target: /
#     nginx.ingress.kubernetes.io/enable-access-log: "true"
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: data-api.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: data-api-service
#             port:
#               number: 8006

#   - host: collector.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: data-collector
#             port:
#               number: 8000

#   - host: processor.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: data-processor
#             port:
#               number: 8001

#   - host: db-writer.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: database-writer
#             port:
#               number: 8002

#   - host: file-writer.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: file-writer
#             port:
#               number: 8003


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-access-log: "true"

   
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: data-api-service
            port:
              number: 8006
      - path: /collector(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: data-collector
            port:
              number: 8000
      - path: /processor(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: data-processor
            port:
              number: 8001
      - path: /db-writer(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: database-writer
            port:
              number: 8002
      - path: /file-writer(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: file-writer
            port:
              number: 8003
